kubernetes/apps/media/seerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - seerr.int.nerdbox.dev
        - requests.int.nerdbox.dev
        - seerr.nerdbox.dev
        - requests.nerdbox.dev
        - overseerr.nerdbox.dev
      secretName: seerr-tls
  rules:
    - host: seerr.int.nerdbox.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
    - host: requests.int.nerdbox.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
    - host: seerr.nerdbox.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
    - host: requests.nerdbox.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
    - host: overseerr.nerdbox.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
